# openai-agent-sdk

./: .gitignore  README.md  main.py  pyproject.toml
Guardrails/: input_guardrails.py  main.py
Guardrails agent/: main.py  practice.py
LLM output type/: main.py
Runner/: main.py
Streaming/: main.py
agent_as _tool/: agent.py
agent_hook/: agent.py  my_agent_hooks.py
context/: llm_context.py  local_context.py
custom-function-tool/: main.py
customised handsoff/: main.py
dynamic-instruction-and -context/: main.py
runner_hook/: agent.py  my_run_hooks.py
session-management/: agent.py
src/openai_agent_sdk/: gemini_config.py  my_tool.py
tracing/: main.py
